package com.dh.Wesped.Model;

public enum RoleName {

    ROLE_ADMIN, ROLE_USER
}