package com.dh.Wesped;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class WespedApplication {

    public static void main(String[] args) {
        SpringApplication.run(WespedApplication.class, args);
    }

}